<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPS Tracker by OKA</string>
    <string name="menu_settings">Settings</string>
    <string name="Version_Name">1.0</string>
    <string name="close">Close</string>
    <string name="speed">Speed: …</string>
    <string name="latitude_gps">Latitude: GPS wird gesucht</string>
    <string name="longitude_gps">Longitude: GPS wird gesucht</string>
    <string name="distance">Distance: …</string>
    <string name="reload">Reload</string>
    <string name="loginScreenText">Text for Login Screen</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="logout">Logout</string>
    <string name="registerString">Fill in all Information to Register!</string>
    <string name="clear">Clear all Information</string>

</resources>